# gen_ai_csv_analyst

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agent/: agent.py  prompt.py
app/config/: settings.py
app/data/csv_files/: customer_profiles.csv  sales_transactions.csv
app/tools/: data_tools.py  python_tools.py
app/utils/: helpers.py
