[project]
name = "csv-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.3",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
    "tabulate>=0.9.0",
]
